--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
-.library-display > * {
+.libraryDisplay > * {
     border: 1px solid black;
     display: inline-block;
 }
 
-.library-display {
+.libraryDisplay {
     display: grid;
     grid-template-columns: 200px 200px;
     grid-template-rows: 200px;
-    grid-auto-rows: 200px;
     grid-auto-columns: 200px 200px;
-    gap: 10px;
+    grid-auto-rows: 200px;
+    gap: 20px 10px;
 }
