--- a/styles.css
+++ b/styles.css
@@ -12,9 +12,9 @@
 
 .libraryDisplay {
     display: grid;
-    grid-template-columns: 200px 200px;
+    grid-template-columns: 200px 200px 200px;
     grid-template-rows: 200px;
-    grid-auto-columns: 200px 200px;
+    grid-auto-columns: 200px 200px 200px;
     grid-auto-rows: 200px;
     gap: 20px 10px;
 }
