--- a/styles.css
+++ b/styles.css
@@ -36,4 +36,10 @@ input {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100px;
+    width: 100px;
+}
+
+:has( > :checked) {
+    border: 3px solid blue;
 }
